--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2024"
 clap = {version="4.5.39", features=["derive"]}
 owo-colors="4.2.1"
 thiserror = "1.0"
+
+[lib]
+crate-type = ["lib", "staticlib", "cdylib"]
+
+
